--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <h3>LIVES:<span class="lives-left"></span></h3>
     </div>
 
+    <button class="hint" onclick="showHintSwitch()"> HINTS:<span class="hints-left"></span></button>
+    <button class="safe" onclick="getSafeCell(this)"> SAFE CLICK :<span class="safe-clicks-left"></span></button>
+
     <script src="js/utils.js"></script>
     <script src="js/1.js"></script>
 </body>
